[package]
name = "jsnt-site"
version = "0.3.0"
description = "A static site generator with zero Javascript"
authors = ["Elias Watson <contact@eliaswatson.dev>"]
homepage = "https://jsnt.site"
repository = "https://github.com/EliasWatson/jsnt-site"
license = "MIT"
license-file = "LICENSE"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
lazy_static = "1.4.0"
fancy-regex = "0.10.0"
